--- a/styles/scss/_panels.scss
+++ b/styles/scss/_panels.scss
@@ -1,3 +1,8 @@
+.cms {
+    #Theme {
+        display: none;
+    }
+}
 
 .cms .cms-panel-padded,
 .ui-tabs .ui-tabs-panel.cms-panel-padded {
@@ -159,7 +164,6 @@
 
     font-size: 0;
     font-family: "FontAwesome";
-
 
 }
 
