--- a/styles/scss/_fields.scss
+++ b/styles/scss/_fields.scss
@@ -1,8 +1,44 @@
 .cms {
+    .ui-tabs .ui-tabs-nav .ui-state-active a {
+        border-color: transparent;
+        color: white !important;
+    }
+    .field label.right,
+    .field label.left {
+        float: none !important;
+        width: 100% !important;
+    }
+    .field .middleColumn,
+    label.right {
+        margin-left: 0 !important;
+    }
+    label.right,
+    .description {
+        border-left: 3px solid #0073aa;
+        background: rgba(black, 0.03);
+        padding: 10px;
+        margin-top: 20px;
+        max-width: 590px;
+    }
+    .field .description {
+        margin-left: 0 !important;
+    }
     .ss-uploadfield .ss-uploadfield-item .ss-uploadfield-item-preview.ss-uploadfield-dropzone {
         box-shadow: none;
         border-radius: 0;
         background: white;
+    }
+    .ss-uploadfield .ss-uploadfield-addfile.borderTop {
+        border: 0px solid transparent;
+    }
+    .ss-uploadfield-files,
+    .ss-uploadfield .ss-uploadfield-item {
+        background: white !important;
+        max-width: 580px;
+        border: 1px solid #e5e5e5 !important
+    }
+    .ss-uploadfield-files {
+        border: 0px solid transparent !important;
     }
     .field.urlsegment .preview {
         margin-right: 10px;
