--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -1,4 +1,34 @@
 .cms {
+    .cms .ui-tabs-nav li.ui-state-active{
+    }
+    .profile-link {
+        top: 8px !important;
+        position: relative;
+    }
+    .ui-tabs.cms-tabset-primary .ui-tabs-nav .ui-state-active a, .ui-tabs .ui-tabs-nav.cms-tabset-nav-primary .ui-state-active a, .ui-tabs .cms-content-header-tabs .ui-tabs-nav .ui-state-active a {
+        margin: 0;
+        padding: 0 12px;
+        font-weight: 400;
+    }
+    .ui-tabs.cms-tabset-primary .ui-tabs-nav .ui-state-active a, .ui-tabs .ui-tabs-nav.cms-tabset-nav-primary .ui-state-active a, .ui-tabs .cms-content-header-tabs .ui-tabs-nav .ui-state-active a {
+        border-bottom-width: 4px !important;
+    }
+    .collapsed {
+        .toggle-expand {
+            span {
+                transform: rotate(180deg) translateY(25%) translateX(100%);
+            }
+        }
+        .logout-link {
+            display: none;
+        }
+    }
+    .cms-content-tools .cms-panel-content {
+        padding: 8px 8px 0px 6px !important;
+    }
+    .cms-content-tools .cms-panel-header {
+        padding-bottom: 11px !important;
+    }
     #Form_EditForm_ParentID {
         display: none;
     }
