--- a/styles/scss/_tabs.scss
+++ b/styles/scss/_tabs.scss
@@ -4,8 +4,8 @@
   .ui-tabs .cms-content-header-tabs .ui-tabs-nav {
     border-left: none;
     .ui-state-default {
-      background: #ced7dc;
-      border-color: #ced7dc;
+      background: #f1f1f1;
+      border-color: #f1f1f1;
       outline: none;
       border-left: none;
       border-right: none;
