Fixed an issue where the hit box would overlay critical input elements

--- a/styles/scss/_left-menu.scss
+++ b/styles/scss/_left-menu.scss
@@ -76,6 +76,9 @@
       .cms-logo, .cms-login-status {
         opacity: 0;
       }
+      .cms-login-status {
+        width:38px;
+      }
     }
   }
   .cms-menu-list {
